# telegram-kitogram

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot_database.py  config.py  docker-compose.yml  log_config.py  main.py  pyproject.toml  run_bot.sh  telegram_bot.py  test_bot.py
dialogue_kitogram/data/: .gitattributes  labeled_dataset_from_hf.txt  train_data.txt
dialogue_kitogram/src/: bot_database.py  config.py  log_config.py  telegram_bot.py
dialogue_kitogram/src/core/: base_model.py
dialogue_kitogram/src/fastspam/: ft_model.py
experiments/: training.py
